# simple-package-for-learning-to-import

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/splti/: my_demo.py
tests/: test_my_demo.py
