[project]
# The name stands for "Simple Package for Learning to Import"
name = "splti"
version = "0.0.1"
#dynamic = ["dependencies"]

[project.scripts]
demo = "splti.my_demo:my_demo"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

#[tool.hatch.metadata.hooks.requirements_txt]
#files = ["requirements.txt"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

